--- a/index.html
+++ b/index.html
@@ -1,41 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <title>Yoga for Inner Transformation & Personal Growth</title>
-        <meta name="description" content="Discover the ancient science that provides tools and solutions to achieve a profound level of spiritual awareness and inner transformation in your life" />
-        <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-        <!-- Custom styles for this template -->
-        <link href="justified-nav.css" rel="stylesheet">
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!DOCTYPE html> 
+<html lang="en"> 
+    <head> 
+        <meta charset="utf-8"> 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
+        <meta name="description" content=""> 
+        <meta name="author" content=""> 
+        <title>Yoga for Inner Transformation & Personal Growth</title>         
+        <meta name="description" content="Discover the ancient science that provides tools and solutions to achieve a profound level of spiritual awareness and inner transformation in your life" /> 
+        <!-- Bootstrap core CSS -->         
+        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"> 
+        <!-- Custom styles for this template -->         
+        <link href="justified-nav.css" rel="stylesheet"> 
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->         
         <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    </head>
-    <body>
-        <div class="container">
-            <!-- Jumbotron -->
-            <div class="jumbotron">
-                <h1>UNDER CONSTRUCTION</h1>
-            </div>
-            <!-- Site footer -->
-            <footer class="footer">
-                <p>&copy; Yoga.ovh 2014</p>
-            </footer>
+    <![endif]-->         
+    </head>     
+    <body> 
+        <div class="container"> 
+            <!-- Jumbotron -->             
+            <div class="jumbotron"> 
+                <h1>COMMING SOON</h1> 
+            </div>             
+            <!-- Site footer -->             
+            <footer class="footer"> 
+                <p>&copy; Yoga.ovh 2014</p> 
+            </footer>             
         </div>         
-        <!-- /container -->
+        <!-- /container -->         
         <!-- Bootstrap core JavaScript
-    ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
-    </body>
+    ================================================== -->         
+        <!-- Placed at the end of the document so the pages load faster -->         
+        <script src="assets/js/jquery.min.js"></script>         
+        <script src="bootstrap/js/bootstrap.min.js"></script>         
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->         
+        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>         
+    </body>     
 </html>
